--- a/pom.xml
+++ b/pom.xml
@@ -11,22 +11,17 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
-	<groupId>com.mhj.ranking</groupId>
+	<groupId>com.mhj</groupId>
 	<artifactId>ranking-back</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>ranking-back</name>
-	<description>Demo project for Spring Boot</description>
-
-	<properties>
-		<java.version>1.8</java.version>
-		<!-- <jakartaee>8.0</jakartaee> -->
-	</properties>
+	<!-- <name>ranking-back</name> -->
+	<!-- <description>Demo project for Spring Boot</description> -->
 
 	<modules>
 		<module>ranking-core</module>
 		<module>ranking-service</module>
- 		<module>ranking-webapp</module> 
+		<module>ranking-webapp</module>
 	</modules>
 
 </project>
