--- a/ranking-webapp/pom.xml
+++ b/ranking-webapp/pom.xml
@@ -3,31 +3,25 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
-		<groupId>com.mhj.ranking</groupId>
+		<groupId>com.mhj</groupId>
 		<artifactId>ranking-back</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	
+
 	<groupId>com.mhj.ranking</groupId>
 	<artifactId>ranking-webapp</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>ranking-webapp</name>
-	<description>Demo project for Spring Boot</description>
-	
+<!-- 	<name>ranking-webapp</name> -->
+<!-- 	<description>Demo project for Spring Boot</description> -->
+
 	<properties>
 		<java.version>1.8</java.version>
 		<!-- <jakartaee>8.0</jakartaee> -->
 	</properties>
-	
+
 	<dependencies>
-		<dependency>
-			<groupId>com.mhj.ranking</groupId>
-			<artifactId>ranking-service</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -39,6 +33,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 
 		<dependency>
@@ -108,14 +112,18 @@
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.7.0</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
-			<version>3.3.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.mhj.ranking</groupId>
+			<artifactId>ranking-service</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
