--- a/ranking-webapp/src/main/resources/application.properties
+++ b/ranking-webapp/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.servlet.context-path=/ranking
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=${DB_HOST}
 spring.datasource.username=${DB_USER}
@@ -16,3 +17,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 # Hibernate ddl auto (create, create-drop, validate, update)
  spring.jpa.hibernate.ddl-auto=update
 
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
