--- a/ranking-core/pom.xml
+++ b/ranking-core/pom.xml
@@ -20,8 +20,9 @@
 		<java.version>1.8</java.version>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
 		<lombok.version>1.18.24</lombok.version>
+		<swagger.version>3.0.0</swagger.version>
 	</properties>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -63,6 +64,12 @@
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
 			<version>${mapstruct.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${swagger.version}</version>
 		</dependency>
 
 	</dependencies>
