--- a/ranking-webapp/src/main/resources/application.properties
+++ b/ranking-webapp/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.servlet.context-path=/ranking
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=${DB_HOST}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=${DB_HOST:jdbc:mysql://mysql.mhj.kinghost.net/mhj06?useTimezone=true&serverTimezone=UTC}
+spring.datasource.username=${DB_USER:mhj06}
+spring.datasource.password=${DB_PASS:2y244y26}
  
+spring.datasource.hikari.maximum-pool-size= 20 #maximum pool size
 spring.datasource.hikari.connection-timeout = 20000 #maximum number of milliseconds that a client will wait for a connection
 spring.datasource.hikari.minimum-idle= 10 #minimum number of idle connections maintained by HikariCP in a connection pool
-spring.datasource.hikari.maximum-pool-size= 10 #maximum pool size
 spring.datasource.hikari.idle-timeout=10000 #maximum idle time for connection
-spring.datasource.hikari.max-lifetime= 1000 # maximum lifetime in milliseconds of a connection in the pool after it is closed.
+spring.datasource.hikari.max-lifetime= 300000 # maximum lifetime in milliseconds of a connection in the pool after it is closed.
 spring.datasource.hikari.auto-commit =true #default auto-commit behavior.
 
 # Dialeto SQL melhorar o SQL gerado pelo Hibernate
