--- a/ranking-core/src/main/resources/application.properties
+++ b/ranking-core/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=${DB_HOST}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=${DB_HOST:jdbc:mysql://localhost:3306/mhj06?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASS:2y244y26}
  
 spring.datasource.hikari.connection-timeout = 20000 #maximum number of milliseconds that a client will wait for a connection
 spring.datasource.hikari.minimum-idle= 10 #minimum number of idle connections maintained by HikariCP in a connection pool
@@ -13,6 +13,8 @@ spring.datasource.hikari.auto-commit =true #default auto-commit behavior.
 # Dialeto SQL melhorar o SQL gerado pelo Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.jpa.defer-datasource-initialization=true
 # Hibernate ddl auto (create, create-drop, validate, update)
  spring.jpa.hibernate.ddl-auto=update
+ spring.sql.init.mode=always
 
