--- a/ranking-webapp/src/main/resources/application.properties
+++ b/ranking-webapp/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path=/ranking
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=${DB_HOST:jdbc:mysql://mysql.mhj.kinghost.net/mhj06?useTimezone=true&serverTimezone=UTC}
-spring.datasource.username=${DB_USER:mhj06}
+spring.datasource.url=${DB_HOST:jdbc:mysql://localhost:3306/mhj06?useTimezone=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false}
+spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASS:2y244y26}
  
 spring.datasource.hikari.maximum-pool-size= 20 #maximum pool size
