--- a/ranking-webapp/src/main/resources/application.properties
+++ b/ranking-webapp/src/main/resources/application.properties
@@ -15,6 +15,10 @@ spring.datasource.hikari.auto-commit =true #default auto-commit behavior.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
- spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+springdoc.api-docs.path=/api-docs
+
+springdoc.swagger-ui.path=/swagger-ui-custom.html
